<resources>
    <string name="app_name">ابتهالات</string>
    <string name="tobar">نصرالدين طوبار</string>
    <string name="fashni">طه الفشني</string>
    <string name="bahtimi">كامل يوسف البهتيمي</string>
    <string name="imran">محمد عمران</string>
    <string name="tokhi">محمد الطوخي</string>
    <string name="nakshbandi">سيد النقشبندي</string>
    <string name="old">ابتهالات قديمة</string>
</resources>